[CHANGES] preparing 0.7.0 release

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 = app-deploy changes history
 
-== app-deploy 0.7.0 / ?
+== app-deploy 0.7.0 / 2009-12-16
  * pid management rewritten
  * added signal tasks to deal with any pidfile process
  * switched nginx tasks to use signal tasks as a backend
