a way better task dependency management. see:
http://blogger.godfat.org/2009/12/app-deploy-released-3-ruby-rake-mutual.html

don't use ENV, use task argument.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 = app-deploy changes history
 
+== app-deploy 0.7.1 / ?
+ * a way better task dependency management
+
 == app-deploy 0.7.0 / 2009-12-16
  * pid management rewritten
  * added signal tasks to deal with any pidfile process
