--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,11 @@
 = app-deploy changes history
 
-== app-deploy 0.7.1 / ?
+== app-deploy 0.7.1 / 2009-12-17
  * a way better task dependency management
  * fixed that every task can be only invoked once,
-   now some tasks can be invoked twice or above by Task#reenable
+   now nginx, unicorn, and signal tasks can be invoked
+   twice or above by Task#reenable.
+ http://blogger.godfat.org/2009/12/app-deploy-released-3-ruby-rake-mutual.html
 
 == app-deploy 0.7.0 / 2009-12-16
  * pid management rewritten
