--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 = app-deploy changes history
 
+== app-deploy 0.7.2 / ?
+ * fixed timeout, call to_i on timeout argument.
+
 == app-deploy 0.7.1 / 2009-12-17
  * a way better task dependency management
  * fixed that every task can be only invoked once,
