[signal.rake] fixed signal:reload taking args

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 
 == app-deploy 0.7.2 / ?
  * fixed timeout, call to_i on timeout argument.
+ * fixed signal:reload taking args
 
 == app-deploy 0.7.1 / 2009-12-17
  * a way better task dependency management
