[CHANGES, utils.rb] comments for last commit (AppDeploy.invoke)

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
  * fixed timeout, call to_i on timeout argument.
  * fixed signal:reload taking args
  * moved timeout to be last argument.
+ * added AppDeploy.invoke to wrap Task#invoke
 
 == app-deploy 0.7.1 / 2009-12-17
  * a way better task dependency management
