--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 = app-deploy changes history
 
-== app-deploy 0.7.2 / ?
+== app-deploy 0.7.2 / 2009-12-21
  * fixed timeout, call to_i on timeout argument.
  * fixed signal:reload taking args
  * moved timeout to be last argument.
